@@ -1,3 +1,14 @@
+2014-01-10  Commit Queue  <commit-queue@webkit.org>
+
+        Unreviewed, rolling out r161702.
+        http://trac.webkit.org/changeset/161702
+        https://bugs.webkit.org/show_bug.cgi?id=126803
+
+        Broke multiple tests (Requested by ap on #webkit).
+
+        * runtime/JSGenericTypedArrayViewConstructorInlines.h:
+        (JSC::JSGenericTypedArrayViewConstructor<ViewClass>::getCallData):
+
 2014-01-10  David Kilzer  <ddkilzer@apple.com>
 
         Clean up architectures in xcconfig files
