@@ -1,3 +1,15 @@
+2014-01-10  Commit Queue  <commit-queue@webkit.org>
+
+        Unreviewed, rolling out r161702.
+        http://trac.webkit.org/changeset/161702
+        https://bugs.webkit.org/show_bug.cgi?id=126803
+
+        Broke multiple tests (Requested by ap on #webkit).
+
+        * js/script-tests/typedarray-constructors.js: Removed.
+        * js/typedarray-constructors-expected.txt: Removed.
+        * js/typedarray-constructors.html: Removed.
+
 2014-01-10  Dean Jackson  <dino@apple.com>
 
         [JSC] Revise typed array implementations to match ECMAScript and WebGL Specification
